# 2fascanner

./: CMakeLists.txt  README.md  app.rc  base32.cpp  base32.h  capturepreview.cpp  capturepreview.h  capturepreview.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  otpgenerator.cpp  otpgenerator.h  utility.h
